--- a/Lesson02-01/Lesson02-01.csproj
+++ b/Lesson02-01/Lesson02-01.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>cf9c4a05-3319-4b53-b9a9-f81118aa3b90</ProjectGuid>
+    <ProjectGuid>{A14686A2-ECFB-4B76-B57A-A6759E40A81C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Lesson02_01</RootNamespace>
-    <AssemblyName>Lesson02_01</AssemblyName>
+    <AssemblyName>Lesson02-01</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
