--- a/.gitignore
+++ b/.gitignore
@@ -47,9 +47,23 @@ Temporary Items
 .apdisk
 Main/bin/*
 Main/obj/*
-/Lesson01-01/bin/*
-/Lesson01-01/obj/*
-/Lesson02-01/bin/*
-/Lesson02-01/obj/*
-/Lesson02-02/bin/*
-/Lesson02-02/obj/*
+/Main/Lesson01-01/bin/*
+/Main/Lesson01-01/obj/*
+/Main/Lesson02-01/bin/*
+/Main/Lesson02-01/obj/*
+/Main/Lesson02-02/bin/*
+/Main/Lesson02-02/obj/*
+/Main/Lesson03-01/bin/*
+/Main/Lesson03-01/obj/*
+/Main/Lesson03-02/bin/*
+/Main/Lesson03-02/obj/*
+/Main/Lesson04-01/bin/*
+/Main/Lesson04-01/obj/*
+/Main/Lesson04-02/bin/*
+/Main/Lesson04-02/obj/*
+/Main/Lesson05-01/bin/*
+/Main/Lesson05-01/obj/*
+/Main/Lesson06-01/bin/*
+/Main/Lesson06-01/obj/*
+/Main/Lesson06-02/bin/*
+/Main/Lesson06-02/obj/*
