--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ Main/obj/*
 /Main/Lesson06-01/obj/*
 /Main/Lesson06-02/bin/*
 /Main/Lesson06-02/obj/*
+/Main/Lesson06-03/bin/*
+/Main/Lesson06-03/obj/*
+/Main/Lesson07-01/bin/*
+/Main/Lesson07-01/obj/*
