--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ Main/obj/*
 /Main/Lesson06-03/obj/*
 /Main/Lesson07-01/bin/*
 /Main/Lesson07-01/obj/*
+/Main/AdditionalTaskB1/bin/*
+/Main/AdditionalTaskB1/obj/*
