--- a/Main/AdditionalTaskB1/AdditionalTaskB1.csproj
+++ b/Main/AdditionalTaskB1/AdditionalTaskB1.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9DF399B9-0EF9-409D-8146-AE961E0B2606}</ProjectGuid>
+    <ProjectGuid>{CC033E71-4CC2-4D9F-8DE8-D4A80295DB4F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lessom07_01</RootNamespace>
-    <AssemblyName>Lessom07_01</AssemblyName>
+    <RootNamespace>AdditionalTaskB1</RootNamespace>
+    <AssemblyName>AdditionalTaskB1</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
