--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ Main/obj/*
 /Main/Lesson07-01/obj/*
 /Main/AdditionalTaskB1/bin/*
 /Main/AdditionalTaskB1/obj/*
+/Main/AdditionalTaskB2/bin/*
+/Main/AdditionalTaskB2/obj/*
