--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ Main/obj/*
 /Main/AdditionalTaskB1/obj/*
 /Main/AdditionalTaskB2/bin/*
 /Main/AdditionalTaskB2/obj/*
+/Main/AdditionalTaskB4/bin/*
+/Main/AdditionalTaskB4/obj/*
