--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,8 @@ Main/obj/*
 /Main/Lesson06-02/obj/*
 /Main/Lesson06-03/bin/*
 /Main/Lesson06-03/obj/*
+/Main/Lesson06-04/bin/*
+/Main/Lesson06-04/obj/*
 /Main/Lesson07-01/bin/*
 /Main/Lesson07-01/obj/*
 /Main/AdditionalTaskB1/bin/*
