--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ Main/obj/*
 /Main/AdditionalTaskB2/obj/*
 /Main/AdditionalTaskB4/bin/*
 /Main/AdditionalTaskB4/obj/*
+/Main/AdditionalTaskH1/bin/*
+/Main/AdditionalTaskH1/obj/*
