--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,24 @@ Main/obj/*
 /Main/Lesson06-04/obj/*
 /Main/Lesson07-01/bin/*
 /Main/Lesson07-01/obj/*
+/Main/Lesson08-01/bin/*
+/Main/Lesson08-01/obj/*
+/Main/Lesson09-00/bin/*
+/Main/Lesson09-00/obj/*
+/Main/Lesson09-02/bin/*
+/Main/Lesson09-02/obj/*
+/Main/Lesson09-03/bin/*
+/Main/Lesson09-03/obj/*
+/Main/Lesson10-01/bin/*
+/Main/Lesson10-01/obj/*
+/Main/Lesson10-02/bin/*
+/Main/Lesson10-02/obj/*
+/Main/Lesson12-01/bin/*
+/Main/Lesson12-01/obj/*
+/Main/Lesson12-01/bin/*
+/Main/Lesson12-01/obj/*
+/Main/Lesson15-01/bin/*
+/Main/Lesson15-01/obj/*
 /Main/AdditionalTaskB1/bin/*
 /Main/AdditionalTaskB1/obj/*
 /Main/AdditionalTaskB2/bin/*
